init project name

--- a/.env_sample
+++ b/.env_sample
@@ -13,7 +13,7 @@ SMTP_USER=test@developer.com
 SMTP_PASSWORD=test@developer.com
 
 # OTEL
-OTEL_RESOURCE_ATTRIBUTES="service.name=go_starter_api,service.namespace=knullsoft,deployment.environment=development"
+OTEL_RESOURCE_ATTRIBUTES="service.name=spsyncpro_api,service.namespace=knullsoft,deployment.environment=development"
 OTEL_EXPORTER_OTLP_ENDPOINT="localhost:4317"
 OTEL_EXPORTER_OTLP_HEADERS="Authorization=Bearer xxxxx"
 
@@ -22,4 +22,4 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=go_starter
+DB_NAME=spsyncpro
