--- a/.env_sample
+++ b/.env_sample
@@ -23,3 +23,6 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=spsyncpro
+
+# Encryption
+ENCRYPTION_KEY="myverystrongpasswordo32bitlength"
